--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.11.0",
-    "jshint-stylish": "^2.0.0"
+    "jasmine-core": "^2.3.4",
+    "jshint-stylish": "^2.0.0",
+    "karma": "^0.12.36",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0"
   }
 }
