--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   },
   "homepage": "https://github.com/rodoabad/rodoabad.github.io",
   "devDependencies": {
+    "chai": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.11.0",
     "jasmine-core": "^2.3.4",
     "jshint-stylish": "^2.0.0",
     "karma": "^0.12.36",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.2.0"
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.1.10",
+    "karma-mocha-reporter": "^1.0.2",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "mocha": "^2.2.5"
   }
 }
