--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My homepage.",
   "main": "index.js",
   "scripts": {
-    "test": "gulp"
+    "test": "gulp github"
   },
   "repository": {
     "type": "git",
@@ -22,10 +22,10 @@
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.11.0",
     "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^2.0.0",
-    "karma": "^0.12.36",
+    "jshint-stylish": "^2.0.1",
+    "karma": "^0.12.37",
     "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.1.10",
+    "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.2.0",
     "mocha": "^2.2.5"
